# RTCW-SP

./: .gitmodules  CMakeLists.txt  README.rst  configure
cmake/: TargetArch.cmake
include/botai/: ai_chat.h  ai_cmd.h  ai_dmnet.h  ai_dmq3.h  ai_main.h  ai_team.h  botai.h  chars.h  inv.h  match.h  syn.h
include/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_cluster.h  be_aas_debug.h  be_aas_def.h  be_aas_entity.h  be_aas_file.h  be_aas_funcs.h  be_aas_main.h  be_aas_move.h  be_aas_optimize.h  be_aas_reach.h  be_aas_route.h  be_aas_routealt.h  be_aas_routetable.h  be_aas_sample.h  be_ai_weight.h  be_interface.h  botlib.h  l_crc.h  l_libvar.h  l_log.h  l_memory.h  l_precomp.h  l_script.h  l_struct.h  l_utils.h
include/bspc/: aas_areamerging.h  aas_cfg.h  aas_create.h  aas_edgemelting.h  aas_facemerging.h  aas_file.h  aas_gsubdiv.h  aas_map.h  aas_prunenodes.h  aas_store.h  be_aas_bspc.h  l_bsp_ent.h  l_bsp_hl.h  l_bsp_q1.h  l_bsp_q2.h  l_bsp_q3.h  l_bsp_sin.h  l_cmd.h  l_log.h  l_math.h  l_mem.h  l_poly.h  l_qfiles.h  l_threads.h  l_utils.h  q2files.h  q3files.h  qbsp.h  qfiles.h  sinfiles.h
include/cgame/: cg_local.h  cg_public.h  tr_types.h
include/client/: client.h  keys.h  snd_local.h  snd_public.h
include/extractfuncs/: l_log.h  l_memory.h  l_precomp.h  l_script.h
include/ft2/: ahangles.h  ahglobal.h  ahglyph.h  ahhint.h  ahloader.h  ahmodule.h  ahoptim.h  ahtypes.h  autohint.h  freetype.h  ftcalc.h  ftconfig.h  ftdebug.h  ftdriver.h  fterrors.h  ftextend.h  ftglyph.h  ftgrays.h  ftimage.h  ftlist.h  ftmemory.h  ftmm.h  ftmodule.h  ftnames.h  ftobjs.h  ftoutln.h  ftraster.h  ftrend1.h  ftrender.h  ftsmooth.h  ftstream.h  ftsystem.h  fttypes.h  psnames.h  sfdriver.h  sfnt.h  sfobjs.h  t1tables.h  ttcmap.h  ttdriver.h  (+11 more)
include/game/: ai_cast.h  ai_cast_fight.h  ai_cast_global.h  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_local.h  bg_public.h  botlib.h  g_func_decs.h  g_funcs.h  g_local.h  g_public.h  g_team.h  q_shared.h  surfaceflags.h
include/idLib/: idAudio.h  idAudioHardware.h  idLib.h  idSound.h  idSpeaker.h
include/jpeg-6/: jchuff.h  jdct.h  jdhuff.h  jerror.h  jinclude.h  jmemsys.h  jmorecfg.h  jpegint.h  jpeglib.h
include/macosx/: CGMouseDeltaFix.h  CGPrivateAPI.h  Q3Controller.h  macosx_display.h  macosx_glimp.h  macosx_local.h  macosx_qgl.h  macosx_timers.h
include/qcommon/: cm_local.h  cm_patch.h  cm_polylib.h  cm_public.h  qcommon.h  qfiles.h  unzip.h  vm_local.h
include/renderer/: anorms256.h  qgl.h  qgl_linked.h  tr_local.h  tr_public.h
include/server/: server.h
include/splines/: math_angles.h  math_matrix.h  math_quaternion.h  math_vector.h  q_splineshared.h  splines.h  util_list.h  util_str.h
include/ui/: ui_local.h  ui_public.h  ui_shared.h
include/unix/: icon.xpm  linux_local.h  qasm.h  unix_glw.h
include/win32/: glw_win.h  resource.h  win_local.h
main/ui/: menudef.h
src/botai/: ai_chat.c  ai_cmd.c  ai_dmnet.c  ai_dmq3.c  ai_main.c  ai_team.c
src/botlib/: CMakeLists.txt  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_entity.c  be_aas_file.c  be_aas_main.c  be_aas_move.c  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_routealt.c  be_aas_routetable.c  be_aas_sample.c  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ea.c  be_interface.c  l_crc.c  l_libvar.c  l_log.c  l_memory.c  l_precomp.c  l_script.c  l_struct.c
src/bspc/: CMakeLists.txt  _files.c  aas_areamerging.c  aas_cfg.c  aas_create.c  aas_edgemelting.c  aas_facemerging.c  aas_file.c  aas_gsubdiv.c  aas_map.c  aas_prunenodes.c  aas_store.c  be_aas_bspc.c  brushbsp.c  bspc.c  csg.c  faces.c  glfile.c  l_bsp_ent.c  l_bsp_hl.c  l_bsp_q1.c  l_bsp_q2.c  l_bsp_q3.c  l_bsp_sin.c  l_cmd.c  l_log.c  l_math.c  l_mem.c  l_poly.c  l_qfiles.c  l_threads.c  l_utils.c  leakfile.c  map.c  map_hl.c  map_q1.c  map_q2.c  map_q3.c  map_sin.c  nodraw.c  (+5 more)
src/cgame/: CMakeLists.txt  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_flamethrower.c  cg_info.c  cg_localents.c  cg_main.c  cg_marks.c  cg_newDraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_syscalls.c  cg_trails.c  cg_view.c  cg_weapons.c
src/client/: CMakeLists.txt  cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  snd_adpcm.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_wavelet.c
src/extractfuncs/: CMakeLists.txt  extractfuncs.c  l_log.c  l_memory.c  l_precomp.c  l_script.c
src/ft2/: ahangles.c  ahglobal.c  ahglyph.c  ahhint.c  ahmodule.c  ahoptim.c  ftcalc.c  ftdebug.c  ftextend.c  ftglyph.c  ftgrays.c  ftinit.c  ftlist.c  ftmm.c  ftnames.c  ftobjs.c  ftoutln.c  ftraster.c  ftrend1.c  ftsmooth.c  ftstream.c  ftsystem.c  sfdriver.c  sfobjs.c  ttcmap.c  ttdriver.c  ttgload.c  ttinterp.c  ttload.c  ttobjs.c  ttpload.c  ttpost.c  ttsbit.c
src/game/: CMakeLists.txt  ai_cast.c  ai_cast_characters.c  ai_cast_debug.c  ai_cast_events.c  ai_cast_fight.c  ai_cast_func_attack.c  ai_cast_func_boss1.c  ai_cast_funcs.c  ai_cast_script.c  ai_cast_script_actions.c  ai_cast_script_ents.c  ai_cast_sight.c  ai_cast_think.c  bg_animation.c  bg_lib.c  bg_misc.c  bg_pmove.c  bg_slidemove.c  g_active.c  g_alarm.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_main.c  g_mem.c  g_misc.c  g_missile.c  g_mover.c  g_props.c  g_save.c  g_script.c  g_script_actions.c  g_session.c  g_spawn.c  g_svcmds.c  g_syscalls.c  g_target.c  (+7 more)
src/idLib/: idQ3Asnd.cpp  idSound.cpp  idSpeaker.cpp
src/jpeg-6/: CMakeLists.txt  jcapimin.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jcparam.c  jcphuff.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  (+9 more)
src/ui/: CMakeLists.txt  ui_atoms.c  ui_gameinfo.c  ui_main.c  ui_players.c  ui_shared.c  ui_syscalls.c
(+110 files in other folders)
